master is now 0.2

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Roundcube Webmail StretchedElastic
 ==================================
 
+Version 0.1.1 (2023-08-13, rc-1.6)
+=================================================
+* Remove _stlye.less from repo
+
 Version 0.1 (2023-07-16, rc-1.6)
 =================================================
  * Created skin
