update after rc 2cf6b35 (support list hove menu added in rc 1.7)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,11 @@
 Roundcube Webmail StretchedElastic
 ==================================
 
+ * Update after rc 2cf6b35 (support list hove menu added in rc 1.7)
+
 Version 0.1.1 (2023-08-13, rc-1.6)
 =================================================
-* Remove _stlye.less from repo
+ * Remove _stlye.less from repo
 
 Version 0.1 (2023-07-16, rc-1.6)
 =================================================
